examples/test/testpolicy13807.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13807
  namespace: namespace237
spec:
  podSelector:
    matchLabels:
      key3: value25
      key40: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value18
      podSelector:
        matchLabels:
          key7: value9
          key31: value27
          key40: value8
